<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="app_background_image">AppBackgroundImage</string>
    <string name="create_new_account">Create new Account ?</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="score">Score: %1$d</string>
    <string name="percentage">Percentage: %1$.2f%%</string>
    <string name="incorrect_answers">Incorrect Answers: %1$d</string>
</resources>