<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_background_image"
            android:scaleType="fitXY"
            android:src="@drawable/login_background" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/quiz_app"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeTextView"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#A9A9A9"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailInputLayout"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#A9A9A9"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/retypePasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordInputLayout"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Retype Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/retypePasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#A9A9A9"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Add your login button, forgot password link, etc. here -->

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/retypePasswordInputLayout"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/signup"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/alreadyAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:text="@string/already_have_an_account"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:theme="@style/ButtonStyle" />

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@id/signupButton"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_marginTop="40dp"-->
        <!--            android:layout_marginEnd="140dp"-->
        <!--            android:text="@string/forgot_password"-->
        <!--            android:textColor="#FFFFFF"-->
        <!--            android:textSize="16sp" />-->


    </RelativeLayout>

</layout>